--- a/index.html
+++ b/index.html
@@ -44,9 +44,11 @@ InstantClick.init();
     <li><a href="#" id="weixin_txt" onclick="submit_query('weixin_txt')">微信</a></li>
     <li><a href="#" id="toutiao_txt" onclick="submit_query('toutiao_txt')">今日头条</a></li>
     <li class="gap"></li>
+    <li><a href="https://workflowy.com/s/Gz22.gGo2zzMG26" target="_blank">工匠精神</a></li>
+    <li><a href="https://mubu.com/doc/k5Vx0Anl7" target="_blank">幕布</a></li>
     <li><a href="./emoji.html" target="iframe">Emoji</a></li>
     <!--<li><a href="#" id="biaoqing_txt" onclick="submit_query('biaoqing_txt')">表情包</a></li>-->    
-    <li><a href="./pb.html" target="_blank">在线排版beta</a></li>
+    <!--<li><a href="./pb.html" target="_blank">在线排版beta</a></li>-->
   </ul>
   <div class="time">
     <span><div id="jnkc" class="hide"></div></span>
