--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <meta name="description" content="爱笔头搜索助手，聚合了百度搜索、360搜索、搜狗搜索、必应搜索，能快速在多个搜索引擎切换。网址：hao.aibitou.com" />
 <meta name="viewport" content="width=device-width" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-<link rel="shortcut icon" href="http://aibitou.qiniudn.com/favicon.ico" type="image/x-icon" />
-<link rel="stylesheet" type="text/css" href="http://aibitou.qiniudn.com/static/css/index.css">
+<link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon" />
+<link rel="stylesheet" type="text/css" href="./static/css/index.css">
 <link rel="dns-prefetch" href="https://www.baidu.com" />
 <link rel="dns-prefetch" href="https://www.so.com" />
 <link rel="dns-prefetch" href="http://www.sogou.com" />
@@ -16,8 +16,8 @@
 <link rel="dns-prefetch" href="http://www.toutiao.com" />
 <link rel="dns-prefetch" href="http://zhihu.sogou.com" />
 <link rel="dns-prefetch" href="http://weixin.sogou.com" />
-<script type="text/javascript" src="http://aibitou.qiniudn.com/static/js/index.js" charset="UTF-8"></script>
-<script src="http://aibitou.qiniudn.com/static/js/instantclick.min.js" data-no-instant></script>
+<script type="text/javascript" src="./static/js/index.js" charset="UTF-8"></script>
+<script src="./static/js/instantclick.min.js" data-no-instant></script>
 <script data-no-instant>
 InstantClick.init();
 </script>
@@ -25,7 +25,7 @@ InstantClick.init();
 <body onload="setDefaultEngine()">
 <div class="nv">
   <a href="./index.html" class="logo">
-    <img src="http://aibitou.qiniudn.com/logo.png" />
+    <img src="./images/logo.png" />
     <!--      <li style="font-size:18px; line-height: 28px; width: 100px; text-align: right;"><a href="main.html" target="iframe" title="首页"><strong>搜索助手</strong></a></li>-->
   </a>
   <ul>
@@ -48,7 +48,6 @@ InstantClick.init();
     <li><a href="https://mubu.com/doc/k5Vx0Anl7" target="_blank">幕布</a></li>
     <li><a href="./emoji.html" target="iframe">Emoji</a></li>
     <!--<li><a href="#" id="biaoqing_txt" onclick="submit_query('biaoqing_txt')">表情包</a></li>-->    
-    <!--<li><a href="./pb.html" target="_blank">在线排版beta</a></li>-->
   </ul>
   <div class="time">
     <span><div id="jnkc" class="hide"></div></span>
@@ -57,15 +56,6 @@ InstantClick.init();
 <iframe src="main.html" name="iframe" frameborder="0" width="100%" height="95%" sandbox="allow-same-origin allow-scripts allow-popups allow-forms allow-pointer-lock"></iframe>
 <script>
 setInterval("jnkc.innerHTML=new Date().toLocaleString()+' 周'+'日一二三四五六'.charAt(new Date().getDay());", 1000);
-</script>
-<script>
-var _hmt = _hmt || [];
-(function() {
-  var hm = document.createElement("script");
-  hm.src = "https://hm.baidu.com/hm.js?e29cabdf029fd6a5a3b9b99aaf384434";
-  var s = document.getElementsByTagName("script")[0]; 
-  s.parentNode.insertBefore(hm, s);
-})();
 </script>
 </body>
 </html>
