--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta name="description" content="爱笔头搜索助手，聚合了百度搜索、360搜索、搜狗搜索、必应搜索，能快速在多个搜索引擎切换。网址：hao.aibitou.com" />
 <meta name="viewport" content="width=device-width" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-<link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon" />
+<link rel="shortcut icon" href="./static/favicon.ico" type="image/x-icon" />
 <link rel="stylesheet" type="text/css" href="./static/css/index.css">
 <link rel="dns-prefetch" href="https://www.baidu.com" />
 <link rel="dns-prefetch" href="https://www.so.com" />
@@ -25,7 +25,7 @@ InstantClick.init();
 <body onload="setDefaultEngine()">
 <div class="nv">
   <a href="./index.html" class="logo">
-    <img src="./images/logo.png" />
+    <img src="./static/logo.png" />
     <!--      <li style="font-size:18px; line-height: 28px; width: 100px; text-align: right;"><a href="main.html" target="iframe" title="首页"><strong>搜索助手</strong></a></li>-->
   </a>
   <ul>
