--- a/main.html
+++ b/main.html
@@ -6,7 +6,7 @@
   <meta name="description" content="" /> 
   <meta name="viewport" content="width=device-width" /> 
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" /> 
-  <link rel="stylesheet" type="text/css" href="http://aibitou.qiniudn.com/static/css/index.css">
+  <link rel="stylesheet" type="text/css" href="./static/css/index.css">
 </head> 
 <body>
   <div class="main">
